--- a/src/sections/banner/BannerSection.astro
+++ b/src/sections/banner/BannerSection.astro
@@ -1,7 +1,7 @@
 ---
 import {Markdown} from "astro/components";
 
-import HeaderLayout from './HeaderLayout.astro';
+import HeaderLayout from '../../layouts/HeaderLayout.astro';
 //import Banner from './Banner.astro';
 ---
 
